<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <com.google.android.material.chip.Chip
        android:id="@+id/chip10"
        android:layout_width="166dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="47dp"
        android:text="@string/Logitics"
        android:textAlignment="center"
        android:textColor="@color/beyaz"
        android:textSize="30sp"
        android:textStyle="bold"
        app:chipBackgroundColor="@color/anaRenk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/chip11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip8" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip8"
        android:layout_width="166dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="47dp"
        android:text="@string/Sales"
        android:textAlignment="center"
        android:textColor="@color/beyaz"
        android:textSize="30sp"
        android:textStyle="bold"
        app:chipBackgroundColor="@color/anaRenk"
        app:layout_constraintBottom_toTopOf="@+id/chip10"
        app:layout_constraintEnd_toStartOf="@+id/chip9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip9"
        android:layout_width="166dp"
        android:layout_height="110dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Safe"
        android:textAlignment="center"
        android:textColor="@color/beyaz"
        android:textSize="30sp"
        android:textStyle="bold"
        app:chipBackgroundColor="@color/anaRenk"
        app:layout_constraintBottom_toTopOf="@+id/chip11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chip8"
        app:layout_constraintTop_toBottomOf="@+id/chip7" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip7"
        android:layout_width="166dp"
        android:layout_height="110dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Bank"
        android:textAlignment="center"
        android:textColor="@color/beyaz"
        android:textSize="30sp"
        android:textStyle="bold"
        app:chipBackgroundColor="@color/anaRenk"
        app:layout_constraintBottom_toTopOf="@+id/chip9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chip"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="94dp"
        android:layout_height="92dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="135dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tasarimodev" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip"
        android:layout_width="166dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="47dp"
        android:text="@string/Stock"
        android:textAlignment="center"
        android:textColor="@color/beyaz"
        android:textSize="30sp"
        android:textStyle="bold"
        app:chipBackgroundColor="@color/anaRenk"
        app:layout_constraintBottom_toTopOf="@+id/chip8"
        app:layout_constraintEnd_toStartOf="@+id/chip7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip11"
        android:layout_width="166dp"
        android:layout_height="110dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Employee"
        android:textAlignment="center"
        android:textColor="@color/beyaz"
        android:textSize="30sp"
        android:textStyle="bold"
        app:chipBackgroundColor="@color/anaRenk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chip10"
        app:layout_constraintTop_toBottomOf="@+id/chip9" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/signika_negative_bold"
        android:text="@string/personel"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="18dp"
        android:text="Muhiddin Korkusuz"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/chip7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="140dp"
        android:backgroundTint="@color/koyuMavi"
        android:text="@string/Exit"
        android:textColor="@color/beyaz"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/chip7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>